test/apps/errors/src/routes/preload-reject.svelte
<script context="module">
	export function preload() {
		return Promise.reject(new Error('boom'))
	}
</script>

<h1>Test has failed</h1>
